--- a/css/master.css
+++ b/css/master.css
@@ -92,7 +92,7 @@ nav{
 
 
 /*=========================================================*/
-/*Header*/
+/*Hero*/
 /*=========================================================*/
 
 #hero{
@@ -101,6 +101,7 @@ nav{
     flex-direction: row;
     justify-content: center;
     align-items: center;    
+    padding: 0 1rem;
 }
 
 #hero h1{
@@ -139,4 +140,21 @@ nav{
         font-size: 3rem;
         letter-spacing: 0.1rem;
     }
+}
+
+
+/*=========================================================*/
+/*temp*/
+/*=========================================================*/
+
+footer{
+    padding: 5rem;
+    background-color: black;
+    color: white;
+}
+
+
+footer p{
+    text-align: center;
+    letter-spacing: 0.2rem;
 }
